Fix header not wrapping the menu correctly

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -76,7 +76,7 @@
   }
 
   .inline-svg {
-    @apply inline-block relative h-5 w-5;
+    @apply inline-block relative h-5 w-5 top-0.5;
   }
 
   .size-10 {
